# RFM_Balance_App

./: README.md  app.py  plots.py  pyproject.toml  rfm_core.py  validation.py
