[project]
name = "rfm-balance-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gunicorn>=23.0.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "streamlit>=1.51.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"
